[package]
name = "lua_on_your_browser"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib","rlib"]

[dependencies]
serde = "1.0"
wasm-bindgen = "0.2"
gloo = "0.11.0"
gloo-utils = "0.2.0"
yew = { version = "0.21.0", features = ["csr"] }
piccolo = "0.3.3"
js-sys = "0.3.70"

chrono="0.4"

[dependencies.web-sys]
version = "0.3"
features = [
  "HtmlElement",
  "Window"
]